<resources>
    <string name="app_name">SuperPianoTiles</string>

    <string name="title_activity_tiles">TilesActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tiles_start">Super Piano Tile</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="action_settings">Préférences</string>
    <string name="bouton_facile">Niveau Facile</string>
    <string name="bouton_normal">Niveau Normal</string>
    <string name="bouton_difficile">Niveau Difficile</string>
    <string name="bouton_continuer"> Continuer </string>
    <string name="bouton_retour_menu"> Menu </string>
    <string name="titre_menu_pause"> Pause </string>
    <string name="bouton_reset"> Reset scores </string>
    <string name="couleur_tuiles">Couleur des tuiles </string>
    <string name="volume">Volume</string>
</resources>
