<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#dcd9d9"
    android:weightSum="1">

    <Button
        android:layout_width="280sp"
        android:layout_height="70sp"
        android:text="@string/bouton_facile"
        android:id="@+id/buttonFacile"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boutonmenu"
        android:textSize="25sp" />

    <TextView
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/scoreFacile"
        android:layout_gravity="center"
        android:background="@drawable/score"
        android:layout_weight="0.05"
        android:gravity="center"
        android:layout_marginBottom="25sp"
        android:textSize="18sp" />

    <Button
        android:layout_width="280sp"
        android:layout_height="70sp"
        android:text="@string/bouton_normal"
        android:id="@+id/buttonNormal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boutonmenu"
        android:textSize="25sp" />

    <TextView
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/scoreNormal"
        android:layout_gravity="center"
        android:background="@drawable/score"
        android:layout_weight="0.05"
        android:gravity="center"
        android:layout_marginBottom="25sp"
        android:textSize="18sp" />

    <Button
        android:layout_width="280sp"
        android:layout_height="70sp"
        android:text="@string/bouton_difficile"
        android:id="@+id/buttonDifficile"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boutonmenu"
        android:textSize="25sp" />

    <TextView
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/scoreDifficile"
        android:layout_gravity="center"
        android:background="@drawable/score"
        android:layout_weight="0.05"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="25sp"
        android:textSize="18sp" />
</LinearLayout>